close img button mobile postion fix

--- a/pages/Home/Home.css
+++ b/pages/Home/Home.css
@@ -208,7 +208,7 @@
     }
 
     .close-btn {
-        top: 10em;
+        top: 7em;
         left: 2em;
     }
 }
